# arcwatch

./: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.remember/tmp/: save-session.pid
agent/: Dockerfile  go.mod
agent/cmd/gpuwatch-agent/: main.go
agent/internal/collector/: gpu.go  gpu_test.go
agent/internal/exporter/: http.go  http_test.go  inference.go  inference_test.go
agent/internal/scraper/: vllm.go  (+1 more)
arcwatch/: celery.py  settings.py  urls.py  wsgi.py
gpuwatch/: celery.py  settings.py  wsgi.py
monitor/: admin.py  api_auth.py  apps.py  decorators.py  forms.py  rest_api.py  urls.py  urls_accounts.py
monitor/migrations/: 0001_initial.py  0002_create_hypertables.py  0003_inference_hypertable.py  0004_gpu_pricing.py  0005_cost_hypertable.py  0006_alertevent_alertrule_and_more.py  0007_invite_and_is_active.py  0008_invite_fixes.py  0009_llm_models.py  0010_llm_indexes.py  0011_claude_code_model.py
monitor/models/: __init__.py  alert.py  base.py  cost.py  gpu.py  inference.py  llm.py  organization.py
monitor/services/: alert_engine.py  cost_engine.py  inference_ingestion.py  llm_sync_engine.py  metric_ingestion.py
monitor/tests/: test_alert_engine.py  test_inference_and_cost.py  test_llm_usage.py  test_metric_ingestion.py  test_models.py  test_settings_views.py
monitor/views/: alert_views.py  cost_views.py  dashboard_views.py  inference_views.py  llm_views.py  settings_views.py
scripts/: nginx-arcwatch.conf  server-deploy.sh
(+28 files in other folders)
